# dynamic-pals

./: .gitignore  .gitmodules  CMakeLists.txt  Install_DynamicPals.bat  README.md  diff_report.patch  dllmain.cpp  helpers.hpp  output.txt  test.py
Docs/: FORMAT_V1.md  FORMAT_V2.md  PAL_IDS.json  README.md  TRAIT_IDS.json  _Template_SwapConfig.json  _Template_SwapConfig_V2.json
cmake_scripts/: generate_templates.ps1  package_release.ps1  write_version.ps1
dlls/: DynamicPals.pak  PalMagic_Converter.py  _Template_SwapConfig.json  update.bat
include/: AsyncHelper.hpp  ConfigManager.hpp  DataTypes.hpp  FileWatcher.hpp  HooksManager.hpp  NativeAsyncLoader.hpp  NotificationManager.hpp  PalProcessor.hpp  SaveManager.hpp  UIManager.hpp  Utils.hpp  VFXManager.hpp  updater.hpp
include/UI/: Controls.hpp  IconLibrary.hpp  UIBase.hpp  UIRegistry.hpp  WidgetBuilder.hpp
include/UI/Components/: Button.hpp  Dropdown.hpp  Selector.hpp  Slider.hpp  Switch.hpp  WindowFrame.hpp
include/UI/Views/: TestUI.hpp  UIManager.hpp  awa.md
src/: AsyncHelper.cpp  ConfigManager.cpp  FileWatcher.cpp  HooksManager.cpp  NativeAsyncLoader.cpp  NotificationManager.cpp  PalProcessor.cpp  SaveManager.cpp  UIManager.cpp  UIParser.cpp  Updater_Offline.cpp  VFXManager.cpp  dllmain.cpp  updater.cpp
src/UI/: UIBase.cpp  UIRegistry.cpp
src/UI/Views/: TestUI.cpp  UIManager.cpp
vfx/: vfx_composition.json  vfx_list.txt
